Bug 102616 - [WK2][WTR] Memory leak in TestController::initialize()
Summary: [WK2][WTR] Memory leak in TestController::initialize()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords:
Depends on:
Blocks: 100678
  Show dependency treegraph
 
Reported: 2012-11-18 11:53 PST by Chris Dumez
Modified: 2012-11-19 06:51 PST (History)
6 users (show)

See Also:


Attachments
Patch (3.21 KB, patch)
2012-11-18 12:27 PST, Chris Dumez
kenneth: review+
buildbot: commit-queue-
Details | Formatted Diff | Diff
Patch (5.07 KB, patch)
2012-11-19 04:25 PST, Chris Dumez
buildbot: commit-queue-
Details | Formatted Diff | Diff
Patch (4.84 KB, patch)
2012-11-19 05:54 PST, Chris Dumez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2012-11-18 11:53:58 PST
WKStringCreateWithUTF8CString() is called for the icon database path but the returned pointer is not adopted.
Comment 1 Chris Dumez 2012-11-18 12:27:52 PST
Created attachment 174854 [details]
Patch
Comment 2 Build Bot 2012-11-18 12:54:59 PST
Comment on attachment 174854 [details]
Patch

Attachment 174854 [details] did not pass win-ews (win):
Output: http://queues.webkit.org/results/14879529
Comment 3 Chris Dumez 2012-11-19 04:25:45 PST
Created attachment 174949 [details]
Patch

Attempt to make Win-EWS happy by exporting 2 additional WTF symbols.
Comment 4 Build Bot 2012-11-19 04:57:53 PST
Comment on attachment 174949 [details]
Patch

Attachment 174949 [details] did not pass win-ews (win):
Output: http://queues.webkit.org/results/14910172
Comment 5 Chris Dumez 2012-11-19 05:54:32 PST
Created attachment 174963 [details]
Patch

Another attempt to make win-ews happy.
Comment 6 Chris Dumez 2012-11-19 06:20:25 PST
Comment on attachment 174963 [details]
Patch

Green bubble :)
Good someone please cq+ ?
Comment 7 WebKit Review Bot 2012-11-19 06:51:19 PST
Comment on attachment 174963 [details]
Patch

Clearing flags on attachment: 174963

Committed r135151: <http://trac.webkit.org/changeset/135151>
Comment 8 WebKit Review Bot 2012-11-19 06:51:24 PST
All reviewed patches have been landed.  Closing bug.