[WK2][WTR] Memory leak in TestController::initialize() https://bugs.webkit.org/show_bug.cgi?id=102616

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-11-19
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Export a few additional WTF symbols for windows port.

* win/WebKit2.def:

Tools:

Remove call to WKStringCreateWithUTF8CString() to construct
the icon database path which was leaking memory since the
returned WKStringRef was not adopted. The code now uses
WTF::String instead of std::string and converts it to a
WKStringRef using toWK().

* WebKitTestRunner/StringFunctions.h:
(WTR::toWK): Overload toWK() to take a WTF::String in
argument.
(WTR):
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::initialize):

Canonical link: https://commits.webkit.org/120826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135151 268f45cc-cd09-0410-ab3c-d52691b4dbfc