Tools/WebKitTestRunner/TestController.cpp
@@ -331,7 +331,6 @@ void TestController::initialize(int argc, const char* argv[])
         WKContextSetDiskCacheDirectory(m_context.get(), dumpRenderTreeTempWK.get());
         WKContextSetCookieStorageDirectory(m_context.get(), dumpRenderTreeTempWK.get());
 
-        std::string iconDatabaseFileTemp(dumpRenderTreeTemp);
         // WebCore::pathByAppendingComponent is not used here because of the namespace,
         // which leads us to this ugly #ifdef and file path concatenation.
 #if OS(WINDOWS)
@@ -339,9 +338,8 @@ void TestController::initialize(int argc, const char* argv[])
 #else
         const char separator = '/';
 #endif
-        iconDatabaseFileTemp = iconDatabaseFileTemp + separator + "WebpageIcons.db";
-        WKRetainPtr<WKStringRef> iconDatabaseFileTempWK = WKStringCreateWithUTF8CString(iconDatabaseFileTemp.c_str());
-        WKContextSetIconDatabasePath(m_context.get(), iconDatabaseFileTempWK.get());
+        String iconDatabaseFileTemp = String::fromUTF8(dumpRenderTreeTemp) + separator + String(ASCIILiteral("WebpageIcons.db"));
+        WKContextSetIconDatabasePath(m_context.get(), toWK(iconDatabaseFileTemp).get());
     }
 
     platformInitializeContext();
